test/execflags/tmacd/config_ref.good
config_ref.chpl:2: syntax error: syntax error near 'ref'
